name:                miso-style
version:             0.1.0.0
synopsis:            CSS in Haskell for the Miso framework
category:            Web, Miso
description:         An implementation of CSS in JS, in Haskell for use with Miso
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:
    Haskell2010
  exposed-modules:
    MisoStyle
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  build-depends:
    base,
    transformers,
    containers,
    miso,
    hashable,
    pretty,
    semigroups,
    lens

executable sample-app
  main-is:             Main.hs
  build-depends:       base, miso, miso-style, containers
  default-language:    Haskell2010
  hs-source-dirs: sample-app

