name:                miso-style
version:             0.1.0.0
synopsis:            CSS in Haskell for the Miso framework
category:            Web, Miso
description:         An implementation of CSS in JS, in Haskell for use with Miso
build-type:          Simple
cabal-version:       >=1.10
maintainer:          Brad Parker <bradsparker@gmail.com>
license:             BSD3
license-file:        LICENSE
extra-source-files:  README.md

source-repository head
  type: git
  location: git@github.com:bradparker/miso-style.git

library
  default-language:
    Haskell2010
  exposed-modules:
    MisoStyle
    MisoStyle.Styled
    MisoStyle.Styles.Types
    MisoStyle.Styles.Properties
    MisoStyle.Styles.PseudoClasses
    MisoStyle.Styles.Print
  default-extensions:
    OverloadedStrings
  ghc-options:
    -Wall
  hs-source-dirs:
    src
  build-depends:
    base < 5,
    transformers,
    containers,
    miso,
    hashable

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
    tests
  build-depends:
    base,
    miso,
    miso-style,
    hspec
  default-language: Haskell2010
