name:                benchmarks
version:             0.1.0.0
synopsis:            Benching miso-style
category:            Web
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3

executable benchmarks
  main-is: Main.hs
  build-depends:
    base,
    miso,
    miso-style,
    vector,
    transformers,
    random
  default-language: Haskell2010
  hs-source-dirs: src
