name:                hello-world
version:             0.1.0.0
synopsis:            Super simple little app
category:            Web
build-type:          Simple
cabal-version:       >=1.10
license:             BSD3

executable hello-world
  main-is:
    Main.hs
  build-depends:
    base,
    miso,
    miso-style,
    containers
  default-language:
    Haskell2010
  hs-source-dirs:
    src
  default-extensions:
    OverloadedStrings
